...
    <View style={{ width: "100%", gap: SPACING.sm }}>
      {!!latestPreviousSetNote && (
        <Text style={{ color: "white", fontSize: FONT.sm }}>{`Previous note: ${latestPreviousSetNote}`}</Text>
      )}
      <NumberInput
        label="Reps"
        testID="set-input-reps"
        value={curSet?.reps ?? null}
        onChangeValue={(reps) => updateSet({ reps })}
      />
      <NumberInput
        label="Weight"
        testID="set-input-weight"
        value={curSet?.weight ?? null}
        decimal
        onChangeValue={(weight) => updateSet({ weight })}
      />
      <AppTextInput
        label="Note"
...
