...
              buttonColor={destructive ? colors.error : colors.primary}
              textColor={destructive ? colors.onError : colors.onPrimary}
              loading={confirming && !secondaryActionLoading}
              onPress={confirming ? undefined : onConfirm}
              disabled={confirmationDisabled || confirming}
            >
              {action ?? "Confirm"}
            </Button>
          </View>
        </View>
    </TopSheet>
  );
};
...
