...
    displaySetIdx ===
    (displayKind === "warmup"
      ? (exercise?.warmupSets?.length ?? 0)
      : (exercise?.workingSets.length ?? 0));
  const title = isAdding
    ? displayKind === "warmup"
      ? "Add Warmup Set"
      : "Add Working Set"
    : "Submit Set";

  return (
    <ConfirmationDialog
      open={!!exercise && setIdx !== undefined}
      onClose={onClose}
...
