...
  ];

  return (
    <ActionDialog
      open={!!exerciseState}
      onClose={onClose}
      title="Submit Set"
      actions={editActions}
    >
      <EditExercise
        exerciseState={exerciseState}
        setExerciseState={setExerciseState}
        takenExercises={takenExercises}
...
