...
  };

  return (
    <ConfirmationDialog
      open={!!exercise && setIdx !== undefined}
      onClose={onClose}
      title="Submit Set"
      icon="check-bold"
      onConfirm={handleSubmitSet}
      confirming={submittingSet || skippingSet}
      secondaryAction="Skip Set"
      onSecondaryAction={() => handleSubmitSet({ skip: true })}
      secondaryActionDisabled={
        exerciseState?.sets[setIdx!]?.skipped || setIdx === exercise!.sets.length
      }
    >
      <EditSet
...
